[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/actors/Actor.gd" type="Script" id=1]
[ext_resource path="res://shaders/ReplaceColors.shader" type="Shader" id=2]
[ext_resource path="res://scenes/actors/players/skins/6.png" type="Texture" id=3]
[ext_resource path="res://scenes/items/attack/swords/skins/diamond-wide.png" type="Texture" id=4]
[ext_resource path="res://scenes/items/armor/skin/ruby_1.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "bump"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, -1 ), Vector2( 6.5, 2.5 ), Vector2( -1, 1 ), Vector2( 1, -1 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.152344, 0.152344, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ 0.0, 1080.0 ]
}

[sub_resource type="Animation" id=4]
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 0.25, 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.127625, 0.153767, 0.796875, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 0.303143, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 1.43051e-06, -1.90735e-06 ), Vector2( 0, -4 ), Vector2( 1.43051e-06, -1.90735e-06 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 0.354553, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.20007, 0.917384 ), Vector2( 0.916712, 1.13495 ), Vector2( 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/c_1 = null
shader_param/c_2 = null
shader_param/c_3 = null
shader_param/r_1 = null
shader_param/r_2 = null
shader_param/r_3 = null
shader_param/u_tolerance = null

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 8 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/c_1 = Color( 1, 0, 0, 1 )
shader_param/c_2 = Color( 0, 1, 0, 1 )
shader_param/c_3 = null
shader_param/r_1 = null
shader_param/r_2 = null
shader_param/r_3 = null
shader_param/u_tolerance = null

[node name="Actor" type="KinematicBody2D"]
position = Vector2( 8, 8 )
z_index = 1
script = ExtResource( 1 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/bump = SubResource( 1 )
anims/damage = SubResource( 2 )
anims/dead = SubResource( 3 )
anims/spawn = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 0.0
playback/speed = 0.0

[node name="Pivot" type="Position2D" parent="."]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Pivot"]
material = SubResource( 6 )
position = Vector2( 1.43051e-06, -1.90735e-06 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -8, -8 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="CurrentWeapon" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( -6, 12 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )

[node name="CurrentArmor" type="Sprite" parent="."]
position = Vector2( 0, 12 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
offset = Vector2( 0, -8 )

[node name="CurrentArtifact" type="Sprite" parent="."]
position = Vector2( 6, 12 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )
